--- a/src/alloy/InputText.module.css
+++ b/src/alloy/InputText.module.css
@@ -1,10 +1,17 @@
-.inputText{
+.inputText {
     font-family: SFProText, serif;
     font-size: 1rem;
     outline: none;
-    border: 1px solid #CCC;
     border-radius: 5px;
     width: 100%;
     box-sizing: border-box;
     padding: 0.2rem;
+}
+
+.normal {
+    border: 1px solid #CCC;
+}
+
+.errors {
+    border: 1px solid red;
 }
